Finished User Stories document

--- a/Docmentation/Requirements/User Stories.tex
+++ b/Docmentation/Requirements/User Stories.tex
@@ -3,6 +3,7 @@
 
 \begin{document}
 \title{Epics and User Stories}
+\date{}
 \maketitle
 \section{Epics}
 \begin{tabular}{| l | p{12cm} |}
@@ -30,6 +31,22 @@
 	& 1.3 & A user must be able to export a learned DAG to a file \\
 	\cline{2-3}
 	& 1.4 & A user must be able to draw and view an inferred DAG \\
+	\hline
+	\multirow{4}{*}{2} & 2.1 & A user must be able to define a custom conditional independence  function\\
+	\cline{2-3}
+	& 2.2 & A user  must be able call a function on data and an conditional independence function which returns a Partial Directed Acyclic Graph \\
+	\cline{2-3}
+	& 2.3 & A user must be able to export a learned PAG to a file \\
+	\cline{2-3}
+	& 2.4 & A user must be able to draw and view an inferred PAG \\
+	\hline
+	\multirow{4}{*}{3} & 3.1 & A user must be able to define a custom conditional independence  function\\
+	\cline{2-3}
+	& 3.2 & A user  must be able call a function on data and an conditional independence function which returns a Partial Directed Acyclic Graph \\
+	\cline{2-3}
+	& 3.3 & A user must be able to export a learned PAG to a file \\
+	\cline{2-3}
+	& 3.4 & A user must be able to draw and view an inferred PAG \\
 	\hline
 	 
 \end{tabular}
