--- a/Docmentation/Requirements/User Stories.tex
+++ b/Docmentation/Requirements/User Stories.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 
 \begin{document}
-\title{Epics and User Stories}
+\title{Epics \& User Stories}
 \date{}
 \maketitle
 \section{Epics}
@@ -10,11 +10,9 @@
 	\hline	
 	ID & Epic \\
 	\hline
-	1 & A user must be able to learn a DAG, which represents causal relationships, from data using the PC algorithm \\
+	1 & A user must be able to learn a Graph, representing causal relationships, from data \\
 	\hline
-	2 & A user must be able to learn a PAG, which represents causal relationships, from data using the FCI algorithm \\
-	\hline
-	3 & A user must be able to learn a PAG, which represents causal relationships, from data using the RFCI algorithm \\
+	2 & A user must be able to view a learned graph \\
 	\hline
 \end{tabular}
 
@@ -24,29 +22,25 @@
 	\hline
 	Epic ID & Story ID & Story \\
 	\hline
-	\multirow{4}{*}{1} & 1.1 & A user must be able to define a custom conditional independence  function\\
+	\multirow{10}{*}{1} & 1.1 & A user must be able to define a custom conditional independence  function\\
 	\cline{2-3}
-	& 1.2 & A user  must be able call a function on data and an conditional independence function which returns a Directed Acyclic Graph \\
+	& 1.2 & A user  must be able to learn a Directed Acyclic Graph using  the PC algorithm \\
 	\cline{2-3}
-	& 1.3 & A user must be able to export a learned DAG to a file \\
+	& 1.3 & A user  must be able to learn a Partially Directed Acyclic Graph using  the FCI algorithm \\
 	\cline{2-3}
-	& 1.4 & A user must be able to draw and view an inferred DAG \\
+	& 1.4 & A user  must be able to learn a Partially Directed Acyclic Graph using  the RFCI algorithm \\
+	\cline{2-3}
+	& 1.5 & A use must have access to predefined conditional independence functions \\
 	\hline
-	\multirow{4}{*}{2} & 2.1 & A user must be able to define a custom conditional independence  function\\
+	\multirow{7}{*}{2} & 2.1 & A user must be able to plot a Graph with directed edges\\
 	\cline{2-3}
-	& 2.2 & A user  must be able call a function on data and an conditional independence function which returns a Partial Directed Acyclic Graph \\
+	& 2.2 & A user  must be able to plot a graph with undirected edges \\
 	\cline{2-3}
-	& 2.3 & A user must be able to export a learned PAG to a file \\
+	& 2.3 & A user must be able to plot a graph with bidirectional edges \\
 	\cline{2-3}
-	& 2.4 & A user must be able to draw and view an inferred PAG \\
-	\hline
-	\multirow{4}{*}{3} & 3.1 & A user must be able to define a custom conditional independence  function\\
+	& 2.4 & A user must be able to plot a graph with a mixture of above edges \\
 	\cline{2-3}
-	& 3.2 & A user  must be able call a function on data and an conditional independence function which returns a Partial Directed Acyclic Graph \\
-	\cline{2-3}
-	& 3.3 & A user must be able to export a learned PAG to a file \\
-	\cline{2-3}
-	& 3.4 & A user must be able to draw and view an inferred PAG \\
+	& 2.5 & A user must have access to a data structure containing edges of the graph \\
 	\hline
 	 
 \end{tabular}
