--- a/Docmentation/Requirements/Tasks.tex
+++ b/Docmentation/Requirements/Tasks.tex
@@ -1,17 +1,18 @@
 \documentclass{article}
-
+\usepackage{multirow}
 
 \begin{document}
 	\title{Tasks}
 	\date{}
 	\maketitle
-	\begin{tabular}{| l | p{5cm} | l |}
+	\begin{tabular}{| c | c | p{5cm} | l |}
 	\hline
-	Task ID & Task & Associated Stories \\
+	Sprint & Task ID & Task & Associated Stories \\
 	\hline
-	1 & Create a data structure to hold graphs & 1.2, 2.2, 3.2 \\
-	\hline
-	2 &  Create a data structure to hold a DAG & 1.1, 1.3, 1.4\\
+	\multirow{5}{*}{1}
+	& 1 & Create a graph class which can store a graph, generate a list of nodes and edges &  1.2, 1.3, 1.4, 1.6, 2.*\\
+	\cline{2-4}
+	& 2 &  Create a function to estimate the skeleton of a graph from data & 1.5\\
 	\hline
 	
 	\end{tabular}
