--- a/Docmentation/Requirements/User Stories.tex
+++ b/Docmentation/Requirements/User Stories.tex
@@ -22,15 +22,17 @@
 	\hline
 	Epic ID & Story ID & Story \\
 	\hline
-	\multirow{10}{*}{1} & 1.1 & A user must be able to define a custom conditional independence  function\\
+	\multirow{11}{*}{1} & 1.1 & A user must be able to define a custom conditional independence  function\\
 	\cline{2-3}
 	& 1.2 & A user  must be able to learn a Directed Acyclic Graph using  the PC algorithm \\
 	\cline{2-3}
-	& 1.3 & A user  must be able to learn a Partially Directed Acyclic Graph using  the FCI algorithm \\
+	& 1.3 & A user  must be able to learn a Partial  Ancestral Graph using  the FCI algorithm \\
 	\cline{2-3}
-	& 1.4 & A user  must be able to learn a Partially Directed Acyclic Graph using  the RFCI algorithm \\
+	& 1.4 & A user  must be able to learn a Partial  Ancestral Graph using  the RFCI algorithm \\
 	\cline{2-3}
-	& 1.5 & A use must have access to predefined conditional independence functions \\
+	& 1.5 & A user must have access to predefined conditional independence functions \\
+	\cline{2-3}
+	& 1.6 & A user must be able to estimate the skeleton of a graph \\
 	\hline
 	\multirow{7}{*}{2} & 2.1 & A user must be able to plot a Graph with directed edges\\
 	\cline{2-3}
