--- a/Docmentation/LitRev.tex
+++ b/Docmentation/LitRev.tex
@@ -28,6 +28,7 @@ Causal Networks are graphical models which represent a set of variables, their c
 In a DAG all edges have a single direction, whereas in a MAG edges may be directed or bidirectional \cite{zhang2008causal}.
 \\
 
+\begin{center}
 \begin{tikzpicture}[shorten >=1pt,->]
 \tikzstyle{vertex}=[circle, draw=black!60, minimum size=12pt]
 \node[vertex] (G_1) at (-1,-1) {1};
@@ -35,24 +36,58 @@ In a DAG all edges have a single direction, whereas in a MAG edges may be direct
 \node[vertex] (G_3) at (1,-1)  {3};
 \draw [->] (G_1) -- (G_2);
 \draw [->] (G_2) -- (G_3);
+\end{tikzpicture}
+\end{center}
 
+\begin{center}
+Figure 1 A DAG with 3 nodes and 2 edges
+\end{center}
+
+\begin{center}
+\begin{tikzpicture}[shorten >=1pt,->]
 \tikzstyle{vertex}=[circle, draw=black!60, minimum size=12pt]
 \node[vertex] (G_1) at (4,-1) {1};
 \node[vertex] (G_2) at (5,0)   {2};
 \node[vertex] (G_3) at (6,-1)  {3};
 \draw [->] (G_1) -- (G_2);
 \draw [<->] (G_2) -- (G_3);
-\end{tikzpicture}
-\\
+\end{tikzpicture}\\
+\end{center}
+
+\begin{center}
+Figure 2 A MAG with 3 nodes and 2 edges
+\end{center}
+
 
 The learning of causal networks allows relationships between variables to be uncovered and presented in a simple and human readable fashion.
 \\
+
+\subsection{Probability and Independence}
+In probability theory we can quantify our confidence in a particular event E occurring. This confidence, denoted as P(E) is a real number between 1 and 0 with 1 representing a certainty and 0 representing an impossibility.
+\\
+
+In the case of random variables an event would be a variable $X$ taking a particular value $x_1$, where $x_1$ is a member of the set $x = \{x_1, x_2, ..., x_n\}$ of possible values $X$ can take. The probability of this event is denoted as $P(X=x_1)$.
+\\
+
+The probability distribution $P(X=x)$ or simply $P(X)$ defines the probabilities for every value which $X$ can take. 
+\\
+
+Distributions of more than one variable can be described with joint distributions. For Variables $X$ and $Y$ the distribution $P(X,Y)$  describes the probability of both $X$ and $Y$ taking particular values simultaneously. 
+\\
+
+Joint distributions can also describe how the value of one variable can effect the value of an other. $P(X|Y)$ describes the probabilities of $X$ taking particular values ''given'' a value that $Y$ has taken. $P(X|Y) = P(X,Y)/P(Y)$.
+\\
+
+If two variables are independent there is no correlation between the values they take. That is for two variables $X$ and $Y$, the distribution $P(X|Y)$ would be the same for all values of $Y$. Therefore $P(X|Y) = P(X)$. If two variables are independent we can determine that there is no causal relationship between them.\\
+
+Two variables $X$ and $Y$ can be considered independent conditioned on a third variable $Z$ if there is no correlation between $X$ and $Y$ for particular values of $Z$.\\
+
 
 \subsection{D Separation}
 
 A path is any sequence of adjacent edges regardless of their directionality. A collider is node in a path which is both entered and left on edges which are directed toward the node. Unblocked refers to a path that does not traverse a collider\cite{pearl2003causality}.
 \\
-
+\begin{center}
 \begin{tikzpicture}[shorten >=1pt,->]
 \tikzstyle{vertex}=[circle, draw=black!60, minimum size=12pt]
 \node[vertex] (G_1) at (-1,-1) {1};
@@ -61,11 +96,15 @@ A path is any sequence of adjacent edges regardless of their directionality. A c
 \draw [->] (G_1) -- (G_2);
 \draw [<-] (G_2) -- (G_3);
 \end{tikzpicture}
-\\
+\end{center}
+
+\begin{center}
+Figure 3 A graph containing a collider
+\end{center}
 
 If every path between nodes X and Y traverses a collider, nodes X and Y are unconditionally d-separated or d-separated conditioned on the empty set \cite{pearl2003causality}. Two unconditionally d-separated nodes in a causal network are considered to be independent\cite{pearl2009}.
 \\
-
+\begin{center}
 \begin{tikzpicture}[shorten >=1pt,->]
 \tikzstyle{vertex}=[circle, draw=black!60, minimum size=12pt]
 \node[vertex] (G_1) at (-1,-1) {1};
@@ -76,8 +115,16 @@ If every path between nodes X and Y traverses a collider, nodes X and Y are unco
 \draw [<-] (G_2) -- (G_4);
 \draw [->] (G_1) -- (G_3);
 \draw [<-] (G_3) -- (G_4);
+\end{tikzpicture}
+\end{center}
 
+\begin{center}
+Figure 4
+\end{center}
 
+\begin{center}
+\begin{tikzpicture}[shorten >=1pt,->]
+\tikzstyle{vertex}=[circle, draw=black!60, minimum size=12pt]
 \node[vertex] (G_1) at (4,-1) {1};
 \node[vertex] (G_2) at (5,0)   {2};
 \node[vertex] (G_3) at (5,-2)  {3};
@@ -87,7 +134,11 @@ If every path between nodes X and Y traverses a collider, nodes X and Y are unco
 \draw [->] (G_1) -- (G_3);
 \draw [->] (G_3) -- (G_4);
 \end{tikzpicture}
-\\
+\end{center}
+
+\begin{center}
+Figure 5
+\end{center}
 
 
 Two nodes X and Y are d-separated conditioned on set Z if:
@@ -102,7 +153,7 @@ Causal networks represent conditional independence with d-separation, variables 
 \subsection{Faithfulness}
 
 
-By testing for d-separation of variables X and Y given conditioning set Z on a graph we can see if $X \independent Y | Z$ \cite{pearl2009}. However, the reverse is only true if the distribution is faithful to the graph. That is, if a distribution is faithful to a graph then only the independence relationships represented by d-separation on the graph are present on the graph exist \cite{scheines1997introduction}. Assuming faithfulness allows the topology of a graph to be learned by testing pairs of variables for independence given various conditioning sets.
+By testing for d-separation of variables X and Y given conditioning set Z on a graph we can see if $X \independent Y | Z$ \cite{pearl2009}. However, the reverse is only true if the distribution is faithful to the graph. That is, if a distribution is faithful to a graph then all indpendence relationships are represented on the graph and only these relationships are present \cite{scheines1997introduction}. Assuming faithfulness allows the topology of a graph to be learned by testing pairs of variables for independence given various conditioning sets.
 \\
 
 \subsection{Discriminating paths}
