Continued with design documentation. Added tests for skeleton function

--- a/Docmentation/Design.tex
+++ b/Docmentation/Design.tex
@@ -46,9 +46,17 @@ Pandas is a library containing DataFrames which allow easy manipulation of data.
 NetworkX was used for graphical models, the Graph and Digraph were used and extended to store various graphs used in the algorithms. The built in functionality of these graphs made extension to new types such as a PDAG simple.\\
 
 \subsection{Requirements}
-\subsubsection{Epics}
-\subsubsection{User Stories}
+Requirements were elicited at the beginning of a sprint. A deliverable was chosen and the requirements were found for that deliverable.
 
+\subsubsection{Epics}
+Epics describe a very high level interaction between a user and the software. They describe the general functionality of a deliverable without discussing it's implementation. Epics were the first stage of requirement elicitation as they they capture the functionality that the requirements must capture.
+\subsubsection{User Stories}
+Each epic is then broken down into user stories. The stories describe describe what a user must be able to do with the software during the epic. They are fairly low level and form a set of required functionality of the software.
+
+\subsubsection{Tasks}
+From the stories can be formed. Theses tasks describe the software that must be implemented to fulfil the requirements. 
+
+Each task has associated stories so that all software can be traced back to an epic.
 \subsection{Abstract Design}
 
 \subsection{Sprints}
