wrote up about implementation. added more chisq tests

--- a/Docmentation/Design.tex
+++ b/Docmentation/Design.tex
@@ -63,5 +63,5 @@ Each task has associated stories so that all software can be traced back to an e
 \subsubsection{Tasks}
 \subsubsection{Concrete Architecture}
 \subsubsection{Unit Test}
-
+All software was tested using the python unittest library. 
 \end{document}
