--- a/Docmentation/Implementation.tex
+++ b/Docmentation/Implementation.tex
@@ -110,7 +110,7 @@ To ensure that the algorithm was behaving as intended all parts must be thorough
 
 For the chi squared independence test a sanity check consisting of testing whether a variable was independent of itself was used. Obviously the test will result in a p-value of 0 so was very easy to to test. This test was repeated in the case of a conditioning set of size 1 and size 2 to ensure this did not affect functionality.\\
 
-Next a preexisitng test from r was used to find results on realistic data. This data was tested with the python implementation and the results compared. Variables from the alarm_10000 dataset were used. many tests with different variables and conditioning sets were used
+Next a preexisitng test from r was used to find results on realistic data. This data was tested with the python implementation and the results compared. Variables from the alarm\_10000 dataset were used. many tests with different variables and conditioning sets were used
 
 
 
